# cursor-alpha

./: .coverage  .cursorrules  .cz.json  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  DEPLOYMENT.md  DEPLOY_FAQ.md  DROPDOWN_MENU_FIX.md  FINAL_PROJECT_REPORT.md  HOT_RELOAD_QUICK_START.md  IMMEDIATE_ACCESS.md  K8S_MONITORING_GUIDE.md  LICENSE  LOCAL_TEST_GUIDE.md  MYSQL_SETUP_GUIDE.md  Makefile  NAVIGATION_STRUCTURE.md  PERMISSION_DESIGN.md  PROJECT_PROGRESS_SUMMARY.md  QUICK_PERMISSION_GUIDE.md  QUICK_SCALE_REFERENCE.md  README.md  SCALE_GUIDE.md  STARTUP_FIX_GUIDE.md  START_GUIDE.md  TEST_ARCHITECTURE_SUMMARY.md  add_all_missing_tests.py  add_missing_tests.py  ai_pipeline_report.md  automated_expressions_report.json  check_all_test_directories.py  check_ci_cd.bat  check_environment.py  clean_cursor_cache.bat  commitlint.config.js  deploy-scale.sh  docker-compose.prod.yml  (+42 more)
.husky/: commit-msg  pre-commit
backend/: Dockerfile  Dockerfile.prod  REAL_NEWS_CRAWLER_IMPLEMENTATION.md  available_publishers.py  backup_database.py  check_articles.py  check_data_analysis.py  check_db_status.py  check_sessions.py  clean_duplicate_news.py  create_articles.py  create_backend_articles.py  create_detailed_articles.py  create_tech_articles.py  create_test_data.py  create_test_user.py  db.sqlite3  fix_bbc_news_issues.py  fix_cnn_crawler.py  pytest.ini  requirements.txt  run_dev.bat  run_dev.py  simple_create_articles.py  start.sh  start_backend.bat  test_api_direct.py  test_api_simple.py  test_api_with_auth.py  test_hot_reload.py
docs/: API.md  BBC_NEWS_FIX_SUMMARY.md  BUG_FIX_TESTING.md  CNN_CRAWLER_ISSUE_SOLUTION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCUMENTATION_STANDARDS.md  ENGLISH_NEWS_DASHBOARD_REDESIGN.md  ENGLISH_TYPING_INTEGRATION_DESIGN.md  FAQ.md  FUNDUS_INTEGRATION.md  GUIDE.md  HOT_RELOAD_GUIDE.md  MYSQL_DEPLOYMENT_CHECKLIST.md  NEWS_CRAWLER_UPGRADE_SUMMARY.md  NEWS_IMAGE_SAVE_SUMMARY.md  NEWS_MANAGEMENT_FIXES_SUMMARY.md  NEW_FEATURE_TESTING.md  NEW_MACHINE_SETUP.md  QWERTY_LEARN_INTEGRATION_PLAN.md  RAILWAY_DEPLOYMENT.md  README.md  TESTING_QUICK_START.md  TESTING_STANDARDS.md  TESTING_SYSTEM.md  TESTING_SYSTEM_SUMMARY.md  TEST_FILE_REORGANIZATION.md  TODO.md  TYPING_PRACTICE_PERFORMANCE_REPORT.md  TYPING_PRACTICE_REFACTOR.md  flaky-tests.md  req-to-test-pipeline.md  self-examination.md  semantic-release.md  新闻爬虫功能完成总结.md  新闻爬虫架构设计文档.md
docs_test/: API.md  CHANGELOG.md  DOCUMENTATION_STANDARDS.md  FAQ.md  GUIDE.md  README.md  TODO.md
e2e/: README.md
frontend/: .eslintrc.js  .prettierignore  .prettierrc  Dockerfile  Dockerfile.prod  index.html  nginx.conf  nginx.prod.conf  package-lock.json  package.json  run_dev.bat  test_hot_reload.txt  tsconfig.json  tsconfig.node.json  vite.config.js  vitest.config.ts  vitest.flaky.config.js
issues/: example_requirement.json  idiomatic_expressions_requirement.json
k8s/: deploy-monitoring.sh
mysql/: init.sql
nginx/: nginx.conf
playwright-report/: index.html
requirements/: idiomatic_expressions_requirement.md
scripts/: .gitkeep  AI_SETUP_GUIDE.md  ai_config.json  ai_integration_guide.md  ai_interface.py  (+4 more)
(+481 files in other folders)
